--- a/lib/demo.html
+++ b/lib/demo.html
@@ -1,10 +1,10 @@
 <meta charset="utf-8">
-<title>simplicity-workflow demo</title>
-<script src="./simplicity-workflow.umd.js"></script>
+<title>ninuo-workflow demo</title>
+<script src="./ninuo-workflow.umd.js"></script>
 
-<link rel="stylesheet" href="./simplicity-workflow.css">
+<link rel="stylesheet" href="./ninuo-workflow.css">
 
 
 <script>
-console.log(simplicity-workflow)
+console.log(ninuo-workflow)
 </script>
